added h2 Credit Suisse

--- a/elon.html
+++ b/elon.html
@@ -6,5 +6,6 @@
 </head>
 <body>
   <h1>Hello Elon University-Job Fair is Sept 20, 2016</h1>
+  <h2>Credit Suisse visits on Sept. 28</h2>
 </body> 
 </html>
